# LastExpanse

./: .clang-format  .gitignore  Build.bat  CMakeLists.txt  LICENSE.md  LISENCE.md  README.md
Engine/: Engine.h  Engine_Common.h  Engine_Macros.h  Engine_Primitives.h  Engine_Result.c  Engine_Result.h  Engine_Result.inl
Engine/Math/: Engine_Math_Rect2.h  Engine_Math_Rect2.inl  Engine_Math_Rect3.h  Engine_Math_Rect3.inl  Engine_Math_Vec2.h  Engine_Math_Vec2.inl  Engine_Math_Vec3.h  Engine_Math_Vec3.inl
Engine/Memory/: Engine_Memory_Copy.h  Engine_Memory_Copy.inl  Engine_Memory_Raw.c  Engine_Memory_Raw.h
Engine/Platform/: Engine_Platform_Window.h  Engine_Platform_Window.inl
Engine/Platform/Windows/: Engine_Platform_Windows_Window.c  Engine_Platform_Windows_Window.prv.h
EngineTests/: EngineTests.cpp
Game/: Game.c
